tests/baselines/reference/parserMemberAccessOffOfGenericType1.errors.txt
tests/cases/conformance/parser/ecmascript5/Generics/parserMemberAccessOffOfGenericType1.ts(1,9): error TS2304: Cannot find name 'List'.
tests/cases/conformance/parser/ecmascript5/Generics/parserMemberAccessOffOfGenericType1.ts(1,21): error TS1005: '(' expected.
tests/cases/conformance/parser/ecmascript5/Generics/parserMemberAccessOffOfGenericType1.ts(1,22): error TS2304: Cannot find name 'makeChild'.
tests/cases/conformance/parser/ecmascript5/Generics/parserMemberAccessOffOfGenericType1.ts(1,33): error TS1005: ')' expected.


==== tests/cases/conformance/parser/ecmascript5/Generics/parserMemberAccessOffOfGenericType1.ts (4 errors) ====
    var v = List<number>.makeChild();
            ~~~~
!!! error TS2304: Cannot find name 'List'.
                        ~
!!! error TS1005: '(' expected.
                         ~~~~~~~~~
!!! error TS2304: Cannot find name 'makeChild'.
                                    ~
!!! error TS1005: ')' expected.